# QARAG

./: .gitignore  README.md  package.json  vercel.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routers/: __init__.py  chat.py  chat_stream.py  documents.py
backend/app/services/: document_processor.py  document_store.py  llm_service.py  tavily_search.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_document_processor.py  test_document_store.py
frontend/qarag/: .env.production  index.html  package.json
frontend/qarag/src/: App.css  App.jsx  index.css  main.jsx
frontend/qarag/src/components/: ChatInterface.jsx  ChatSidebar.jsx  DocumentDrawer.jsx  DocumentUploadPanel.jsx  Header.jsx  components.css
frontend/qarag/src/services/: api.js
